gcc/testsuite/rust/rustc/ui/parser/pat-lt-bracket-1.rs
fn main() {
  match 42 {
    x < 7 => (),
// { dg-error "" "" { target *-*-* } .-1 }
    _ => ()
  }
}

